modified index file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
 <h1>Hi</h1>
 <h1>Batch : GDSE64</h1>
+<h2>Name : Manoji</h2>
+<h6>Age : 20</h6>
 <a href="https://manojisalakshana.000webhostapp.com/" target="_blank">000webhost</a>
 <a href="manojisalakshana.epizy.com" target="_blank">infinity</a>
 </body>
