Added initial Project

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>My Web Page | Title</title>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <base href="localhost">
+    <meta name="keywords" content="IJSE, GDSE, Sri Lanka, CMJD, RWAD">
+    <meta name="description" content="This is for testing my web">
+    <meta name="author" content="Manoji Salakshana">
+    <meta name="owner" content="Manoji Salaskahana">
+    <meta name="robot" content="index">
+    <meta name="theme-color" content="blue">
 </head>
 <body>
-<h1>Hi</h1>
-<h1>Batch : GDSE64</h1>
-<h2>Name : Manoji</h2>
-<h6>Age : 20</h6>
+<h1>Hi, I'm Manji. I'm a software developer </h1>
 <a href="https://manojisalakshana.000webhostapp.com/" target="_blank">000webhost</a>
 <a href="manojisalakshana.epizy.com" target="_blank">infinity</a>
 </body>
