Added iniital Project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>My Web Page | Title</title>
     <meta charset="UTF-8">
@@ -8,12 +9,95 @@
     <meta name="description" content="This is for testing my web">
     <meta name="author" content="Manoji Salakshana">
     <meta name="owner" content="Manoji Salaskahana">
-    <meta name="robot" content="index">
     <meta name="theme-color" content="blue">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<h1>Hi, I'm Manji. I'm a software developer </h1>
-<a href="https://manojisalakshana.000webhostapp.com/" target="_blank">000webhost</a>
-<a href="manojisalakshana.epizy.com" target="_blank">infinity</a>
+
+    <br>
+    <hr>
+    <header>
+        <h3>My PortFolio</h3>
+        <nav>Home</nav>
+        <nav>About</nav>
+        <nav>Education</nav>
+        <nav>Skills</nav>
+        <nav>Projects</nav>
+        <nav>Contact</nav>
+    </header>
+
+    <hr>
+
+    <main>
+        <section>
+            <aside><img src="" alt=""></aside>
+            <article>
+                <h3>Hello <br>I'm Manoji</h3>
+                <h4>I am not a product of my circumstance.Iam <br> a product of my decision<br></h4>
+            </article>
+        </section>
+
+        <section>
+            <section>
+                <h3>About me</h3>
+                <article>My name is Manoji Salakshana. I'm first year student in <br>
+                    IJSE(Institue of Java Software Engineering). I'm currently <br>
+                    more about software engineering, web <br>
+                    development and internet technologies. I like to improve my <br>
+                    with working on projects. Also I have knowledge about <br>
+                    web application designing, UI/Ux design and javaFX.</article>
+                    <article>
+                        <h4>Name : U.K.Manoji Salakshana </h4>
+                        <h4>Age : 21 </h4>
+                        <h4>City : Galle </h4>
+                        <h4>Study : Institute of Java Software Engineering </h4>
+                        <h4>Degree : Graduate Diploma in Software Engineering.</h4>
+                    </article>
+            </section>
+
+        </section>
+
+        <section>
+            <article>
+                <h3>This is my education qualifications</h3>
+            </article>
+        </section>
+
+        <section>
+            <section>
+                <h3>Programminng Languages I Use</h3>
+            </section>
+            <section>
+                <h3>Programming Softwares I Use</h3>
+            </section>
+        </section>
+
+        <section>
+            <article>
+                <h3>This is my projects</h3>
+            </article>            
+        </section>
+
+    <footer>
+        <section>
+            <h2>Let's Work together</h2>
+            
+            <aside>
+                <address>
+                    <a href="mailto: salakshanamanoji@gmail.com">salakshanamanoji</a>
+                </address>
+                <address>
+                    <a href="tel: 0763704725">0763704725</a>
+                </address>
+                <address>
+                    <a href="DSC_0525.JPG" download="m.jpg">bnk</a>
+                </address>
+            </aside>
+        </section>
+    </footer>
+
+    </main>
 </body>
+
 </html>
