Added initial Project

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>My Web Page | Title</title>
     <meta charset="UTF-8">
-    <base href="localhost">
+<!--    <base href="localhost">-->
     <meta name="keywords" content="IJSE, GDSE, Sri Lanka, CMJD, RWAD">
     <meta name="description" content="This is for testing my web">
     <meta name="author" content="Manoji Salakshana">
@@ -14,17 +14,26 @@
 </head>
 
 <body>
-
     <br>
     <hr>
     <header>
-        <h3>My PortFolio</h3>
-        <nav>Home</nav>
-        <nav>About</nav>
-        <nav>Education</nav>
-        <nav>Skills</nav>
-        <nav>Projects</nav>
-        <nav>Contact</nav>
+        <div class="banner">
+            <div class="navbar">
+                <h3>My PortFolio</h3>
+                <nav>Home</nav>
+                <nav><a href="#about">About</a></nav>
+                <nav>Education</nav>
+                <nav>Skills</nav>
+                <nav>Projects</nav>
+                <nav>Contact</nav>
+            </div>
+            <div class="content">
+                <h1>Hello <br>I'm Manoji</h1>
+            </div>
+            <div class="content2">
+                <h4>I am not a product of my circumstance.I am <br> a product of my decision<br></h4>
+            </div>
+        </div>
     </header>
 
     <hr>
@@ -33,14 +42,13 @@
         <section>
             <aside><img src="" alt=""></aside>
             <article>
-                <h3>Hello <br>I'm Manoji</h3>
-                <h4>I am not a product of my circumstance.Iam <br> a product of my decision<br></h4>
+
             </article>
         </section>
 
         <section>
             <section>
-                <h3>About me</h3>
+                <h1><dfn id="about">About me</dfn></h1>
                 <article>My name is Manoji Salakshana. I'm first year student in <br>
                     IJSE(Institue of Java Software Engineering). I'm currently <br>
                     more about software engineering, web <br>
@@ -60,11 +68,12 @@
 
         <section>
             <article>
-                <h3>This is my education qualifications</h3>
+                <h1>Education</h1>
             </article>
         </section>
 
         <section>
+            <h1>Skills</h1>
             <section>
                 <h3>Programminng Languages I Use</h3>
             </section>
@@ -75,13 +84,13 @@
 
         <section>
             <article>
-                <h3>This is my projects</h3>
+                <h1>Projects</h1>
             </article>            
         </section>
 
     <footer>
         <section>
-            <h2>Let's Work together</h2>
+            <h1>Let's Work together</h1>
             
             <aside>
                 <address>
